# codimate

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  lib.rs  render.rs
src/color/: lut.rs  mod.rs  model.rs  parse.rs
src/renderer/: frame.rs  mod.rs  render.rs
src/traits/: float.rs
