[package]
name = "codimate"
version = "0.1.0"
edition = "2024"

[lib]
name = "codimate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
image = "0.25.8"
imageproc = "0.25.0"
ab_glyph = "0.2"
anyhow = "1.0"
hex = "0.4"
serde = { version = "1", default-features = false, optional = true }

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = ["std"]
# Enable the Rust standard library. On by default for convenience.
std = ["alloc"]
# Things that need a heap but not full std
alloc = []
# Optional: serde support (works in no_std)
serde = ["dep:serde"]

# Whether to use a lookup table for srgb conversions.
# Useful if the CPU is being used for lots of calculations rather than the GPU.
srgb_lut = []
# Whether to use f64s for all color conversion functions rather than f32.
color_double_precision = []
